ingress-demo/green-deploy.yaml
  
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: deploy-green
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pod-green
  template:
    metadata:
      labels:
        run: pod-green
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: webdata
          mountPath: "/usr/share/nginx/html"
