ingress-demo/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-blue
spec:
  type: ClusterIP
  selector:
    run: pod-blue
  ports:
    - port: 80
      targetPort: 80
