ingress-demo/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-green
spec:
  type: ClusterIP
  selector:
    run: pod-green
  ports:
    - port: 80
      targetPort: 80
