ingress-demo/blue-green-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-blue-green
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /blue
            backend:
              serviceName: service-blue
              servicePort: 80
          - path: /green
            backend:
              serviceName: service-green
              servicePort: 80
